# uugb

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: game_boy.rs  lib.rs
core/src/apu/: envelope.rs  length.rs  mod.rs  noise.rs  rect_wave.rs  sweep.rs  wave.rs
core/src/cartridge/: context.rs  mod.rs
core/src/cartridge/header/: cgb_flag.rs  destination.rs  entry_point.rs  global_checksum.rs  header_checksum.rs  licensee.rs  logo.rs  mod.rs  ram_size.rs  rom_size.rs  sgb_flag.rs  title.rs  version.rs
core/src/cartridge/mbc/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  (+3 more)
core/src/cpu/: command.rs  context.rs  continuation.rs  cpu_context.rs  mod.rs  registers.rs
core/src/interrupt/: interrupt_controller.rs  mod.rs
core/src/io/: joypad.rs  mod.rs
core/src/joypad/: mod.rs
core/src/memory/: components.rs  context.rs  dma.rs  hram.rs  io.rs  mapped_memory.rs  mod.rs  wram.rs
core/src/ppu/: control.rs  coordinate.rs  interrupt_source.rs  mod.rs  palette.rs  renderer.rs  vec2.rs  vram.rs
core/src/serial/: connection.rs  mod.rs
core/src/timer/: control.rs  divider.rs  mod.rs
core/src/util/: ascii.rs  bits.rs  mod.rs
gui/: Cargo.toml
gui/src/: app.rs  audio.rs  command.rs  lib.rs  renderer.rs
src/: app.rs  info.rs  lib.rs  main.rs  rom.rs
src/app/: audio.rs  mod.rs  renderer.rs
src/cartridge/: mod.rs
src/cartridge/header/: cartridge_type.rs  cgb_flag.rs  destination.rs  entry_point.rs  global_checksum.rs  header_checksum.rs  licensee.rs  logo.rs  mod.rs  ram_size.rs  rom_size.rs  sgb_flag.rs  title.rs
src/cartridge/mbc/: mbc1.rs  mod.rs
src/cpu/: mod.rs
src/memory/: mod.rs
src/rom/: cartridge_type.rs  cgb_flag.rs  licensee.rs  mod.rs  ram_size.rs  rom_size.rs  sgb_flag.rs  title.rs
src/rom/header/: cartridge_type.rs  cgb_flag.rs  destination.rs  entry_point.rs  global_checksum.rs  mod.rs  ram_size.rs  rom_size.rs  sgb_flag.rs  title.rs  version.rs
wasm/: Cargo.toml  LICENSE_MIT  README.md
wasm/src/: lib.rs
(+73 files in other folders)
