[target.'cfg(not(target_arch = "wasm32"))'.workspace]
members = ["core", "gui"]

[target.'cfg(target_arch = "wasm32")'.workspace]
members = ["core", "gui", "wasm"]

[package]
name = "uugb"
authors = ["u_u"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "./core" }
gui = { path = "./gui" }
clap = { version = "3.1.8", features = ["derive"] }
simplelog = "0.10.0"
