[package]
name = "gui"
authors = ["u_u"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
log = "0.4"
cpal = "0.13.5"
eframe = "0.18.0"
instant = "0.1.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.13.5", features = ["wasm-bindgen"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"]}
